[gd_scene load_steps=3 format=3 uid="uid://kbeq4p2a5q24"]

[ext_resource type="Texture2D" uid="uid://dm8kd1updb6qr" path="res://ui/main menu/background.png" id="1_ng38e"]
[ext_resource type="Script" path="res://ui/main menu/menu.gd" id="1_si0rm"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_si0rm")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ng38e")
expand_mode = 1
stretch_mode = 6

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -222.0
offset_right = 192.0
grow_vertical = 0
alignment = 2

[node name="host" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="join" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="quit" type="Button" parent="Main/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Join" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Join"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -85.0
offset_right = 247.0
grow_vertical = 0

[node name="Control" type="Control" parent="Join/Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -222.0
offset_bottom = 0.5
grow_horizontal = 2
grow_vertical = 0

[node name="ItemList" type="ItemList" parent="Join/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="back" type="Button" parent="Join/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Loading" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Loading"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -59.0
offset_right = 117.0
grow_vertical = 0
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Main/VBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/join" to="." method="_on_join_menu_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="item_activated" from="Join/Control/Control/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="pressed" from="Join/Control/back" to="." method="_on_join_back_pressed"]
